lists.less: Fix list-item title word spacing (#99)
refs #89

--- a/public/css/lists.less
+++ b/public/css/lists.less
@@ -114,19 +114,15 @@
       color: @text-color;
       font-weight: bold;
 
-      &:first-of-type {
-        margin-right: .417em;
-      }
-
       &:hover {
         color: @icinga-blue;
         text-decoration: none;
       }
     }
-  }
 
-  .badge {
-    margin-right: .417em;
+    p {
+      margin: 0;
+    }
   }
 }
 
@@ -156,6 +152,14 @@
 
   .title {
     white-space: nowrap;
+
+    p {
+      display: inline;
+
+      & + p {
+        margin-left: .417em;
+      }
+    }
   }
 
   .caption {
